# snctrl

./: GNUmakefile.in  README  README.md  configure  configure.ac
examples/: BreakwellA.f90  BreakwellA.spc  BreakwellD.f90  BreakwellD.spc  BreakwellS.f90  BreakwellS.spc  Submakefile  brachA.spc  brachS.spc  brachistochroneA.f90  brachistochroneD.f90  brachistochroneS.f90  catmixA.f90  catmixD.f90  catmixS.f90  catmixS.spc  check  check.log0  diplantA.f90  diplantA.spc  diplantD.f90  diplantS.f90  diplantS.spc  pendulumA.f90  pendulumA.spc  pendulumD.f90  pendulumD.spc  pendulumS.f90  pendulumS.spc  rocketA.f90  rocketA.spc  rocketD.f90  rocketD.spc  rocketS.f90  rocketS.spc  vanderpolA.f90  vanderpolA.spc  vanderpolD.f90  vanderpolS.f90  vanderpolS.spc  (+4 more)
src/: Submakefile  control.f90  ct02data.f90  ct15usr.f90  ct16refn.f90  ct20eval.f90  ct28derv.f90  ct30ker.f90  precision.f90  snctrl.f90
